# argocd-ci-aware-generator

./: .gitignore  .pre-commit-config.yaml  README.md  argocd-ci-aware-generator-plugin-0.0.10.tgz  argocd-ci-aware-generator-plugin-0.0.13.tgz  argocd-ci-aware-generator-plugin-0.0.14.tgz  argocd-ci-aware-generator-plugin-0.0.15.tgz  argocd-ci-aware-generator-plugin-0.0.16.tgz  argocd-ci-aware-generator-plugin-0.0.17.tgz  argocd-ci-aware-generator-plugin-0.0.18.tgz  argocd-ci-aware-generator-plugin-0.0.19.tgz  argocd-ci-aware-generator-plugin-0.0.20.tgz  argocd-ci-aware-generator-plugin-0.0.21.tgz  argocd-ci-aware-generator-plugin-0.0.22.tgz  argocd-ci-aware-generator-plugin-0.0.23.tgz  argocd-ci-aware-generator-plugin-0.0.24.tgz  argocd-ci-aware-generator-plugin-0.0.25.tgz  argocd-ci-aware-generator-plugin-0.0.26.tgz  argocd-ci-aware-generator-plugin-0.0.27.tgz  argocd-ci-aware-generator-plugin-0.0.28.tgz  argocd-ci-aware-generator-plugin-0.0.29.tgz  argocd-ci-aware-generator-plugin-0.0.30.tgz  argocd-ci-aware-generator-plugin-0.0.31.tgz  argocd-ci-aware-generator-plugin-0.0.7.tgz  argocd-ci-aware-generator-plugin-0.0.8.tgz  argocd-ci-aware-generator-plugin-0.0.9.tgz  argocd-ci-aware-generator-plugin-0.1.0.tgz  index.yaml  mise.toml
.github/workflows/: auto-release.yaml  build.yaml  chart.yaml  lint.yml  test.yaml
app/: Dockerfile  conftest.py  containers.py  docker-compose.yaml  github_utils.py  main.py  mise.toml  pyproject.toml  state.py  test_main.py
bruno/argocd-plugin/: Health.bru  Post SCM Non valid for pre-commit, valid for build.bru  bruno.json
chart/argocd-ci-aware-generator-plugin/: values.yaml
chart/argocd-ci-aware-generator-plugin/templates/: service.yaml  serviceaccount.yaml
charts/: README.md
charts/argocd-ci-aware-generator-plugin/: Chart.yaml  values.yaml
manifests/argocd-plugin-config/: kustomization.yaml  plugin.yaml
(+17 files in other folders)
